--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -246,6 +246,7 @@
      "iopub.status.idle": "2024-05-15T17:31:01.450295Z",
      "shell.execute_reply": "2024-05-15T17:31:01.449759Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.007215,
      "end_time": "2024-05-15T17:31:01.451355",
@@ -274,6 +275,34 @@
     "        root = insert(root, n)\n",
     "\n",
     "    return root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a722649",
+   "metadata": {},
+   "source": [
+    "Best time to buy and sell stocks - I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e905b5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stocks1(prices: list[int]) -> int:\n",
+    "    min_, max_profit = prices[0], 0\n",
+    "    for price in prices:\n",
+    "        max_profit = max(max_profit, price - min_)\n",
+    "        min_ = min(min_, price)\n",
+    "\n",
+    "    return max_profit\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks1([7,1,5,3,6,4]) == 5\n",
+    "assert stocks1([7,6,4,3,1]) == 0"
    ]
   }
  ],
