--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -4247,7 +4247,8 @@
    },
    "source": [
     "Edit Distance\n",
-    "Video Link: https://youtu.be/fJaKO8FbDdo?si=YtaIzd2Iphw_Vrlc"
+    "Video Link: https://youtu.be/fJaKO8FbDdo?si=YtaIzd2Iphw_Vrlc\n",
+    "Naive solution time complexity: O(3 ** N x 3 ** M), Space: O(M + N)"
    ]
   },
   {
@@ -4346,6 +4347,7 @@
      "iopub.status.idle": "2024-05-15T17:31:06.762059Z",
      "shell.execute_reply": "2024-05-15T17:31:06.761526Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020458,
      "end_time": "2024-05-15T17:31:06.763095",
@@ -4380,6 +4382,519 @@
     "# Testing the solution\n",
     "assert editDistanceSpaceOptimized(\"horse\", \"ros\") == 3\n",
     "assert editDistanceSpaceOptimized(\"intention\", \"execution\") == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06a1202d",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/ZmlQ3vgAOMo?si=E_X4r10aFkD_A9Nn\n",
+    "Wildcard Matching"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc9c33aa",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isMatchMemo(s: str, p: str) -> bool:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> bool:\n",
+    "        if i >= N1 and j >= N2:\n",
+    "            return True\n",
+    "        elif i >= N1 or j >= N2:\n",
+    "            return False\n",
+    "        elif s[i] == p[j] or p[j] == '?':\n",
+    "            return backtrack(i + 1, j + 1)\n",
+    "        elif p[j] == '*':\n",
+    "            # consume s[i] or don't consume s[i]\n",
+    "            return backtrack(i + 1, j) or backtrack(i, j + 1)\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    s, p = s + '$', p + '$'\n",
+    "    N1, N2 = len(s), len(p)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isMatchMemo(\"d\", \"*d\") == True\n",
+    "assert isMatchMemo(\"abacd\", \"*c?\") == True\n",
+    "assert isMatchMemo(\"aa\", \"*\") == True\n",
+    "assert isMatchMemo(\"cb\", \"?a\") == False\n",
+    "assert isMatchMemo(\"cb\", \"?a\") == False\n",
+    "assert isMatchMemo(\"abcabczzzde\", \"*abc???de*\") == True\n",
+    "assert isMatchMemo(\"aaa\", \"***a\") == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66694128",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isMatchTab(s: str, p: str) -> bool:\n",
+    "    s, p = s + '$', p + '$'\n",
+    "    N1, N2 = len(s), len(p)\n",
+    "    dp: list[list[bool]] = [[True if i >= N1 and j >= N2 else False for j in range(N2 + 1)] for i in range(N1 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if s[i] == p[j] or p[j] == '?':\n",
+    "                dp[i][j] = dp[i + 1][j + 1]\n",
+    "            elif p[j] == '*':\n",
+    "                dp[i][j] = dp[i + 1][j] or dp[i][j + 1]\n",
+    "            else:\n",
+    "                dp[i][j] = False\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isMatchTab(\"abacd\", \"*c?\") == True\n",
+    "assert isMatchTab(\"abcabczzzde\", \"*abc???de*\") == True\n",
+    "assert isMatchTab(\"aaa\", \"***?\") == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1803ba8d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/wildcard-matching/submissions/1259222651\n",
+    "def isMatch(s: str, p: str) -> bool:\n",
+    "    s, p = s + '$', p + '$'\n",
+    "    N1, N2 = len(s), len(p)\n",
+    "    dp: list[bool] = [True if j >= N2 else False for j in range(N2 + 1)]\n",
+    "    for i in range(N1 - 1, -1, -1):\n",
+    "        next_dp: list[bool] = list(dp)\n",
+    "        for j in range(N2 - 1, -1, -1):\n",
+    "            if s[i] == p[j] or p[j] == '?':\n",
+    "                next_dp[j] = dp[j + 1]\n",
+    "            elif p[j] == '*':\n",
+    "                next_dp[j] = dp[j] or next_dp[j + 1]\n",
+    "            else:\n",
+    "                next_dp[j] = False\n",
+    "\n",
+    "        dp = next_dp\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isMatch(\"abacd\", \"*c?\") == True\n",
+    "assert isMatch(\"abcabczzzde\", \"*abc???de*\") == True\n",
+    "assert isMatch(\"aaa\", \"***?\") == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0af9e13b",
+   "metadata": {},
+   "source": [
+    "Best time to buy and sell stocks - II\n",
+    "Video Link: https://youtu.be/nGJmxkUJQGs?si=xgX1LFznD2IAPCJ7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b5303c1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks1Memo(prices: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, inventory: int) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        elif inventory == -1:\n",
+    "            return max(backtrack(i + 1, i), backtrack(i + 1, -1))\n",
+    "        else:\n",
+    "            return max(prices[i] - prices[inventory] + backtrack(i + 1, -1), backtrack(i + 1, inventory))\n",
+    "\n",
+    "    N = len(prices)\n",
+    "    return backtrack(0, -1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks1Memo([7,1,5,3,6,4]) == 7\n",
+    "assert stocks1Memo([1,2,3,4,5]) == 4\n",
+    "assert stocks1Memo([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b24f5c40",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Striver's approach\n",
+    "def stocks1StriverMemo(prices: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, inventory: bool) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        elif not inventory: # No stock previously purchased: buy or not buy\n",
+    "            return max(-prices[i] + backtrack(i + 1, True), backtrack(i + 1, False))\n",
+    "        else: # Stock already exists: sell or hold stock\n",
+    "            return max(prices[i] + backtrack(i + 1, False), backtrack(i + 1, True))\n",
+    "\n",
+    "    N = len(prices)\n",
+    "    return backtrack(0, False)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks1StriverMemo([7,1,5,3,6,4]) == 7\n",
+    "assert stocks1StriverMemo([1,2,3,4,5]) == 4\n",
+    "assert stocks1StriverMemo([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e752e9f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks1Tab(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[list[int]] = [[0 for j in range(2)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(1, -1, -1):\n",
+    "            if j == 0:\n",
+    "                dp[i][j] = max(-prices[i] + dp[i + 1][1], dp[i + 1][0])\n",
+    "            else:\n",
+    "                dp[i][j] = max(prices[i] + dp[i + 1][0], dp[i + 1][1])\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks1Tab([7,1,5,3,6,4]) == 7\n",
+    "assert stocks1Tab([1,2,3,4,5]) == 4\n",
+    "assert stocks1Tab([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32c0e187",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/best-time-to-buy-and-sell-stock-ii/submissions/1259669260\n",
+    "def stocks1(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[int] = [0 for j in range(2)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(1, -1, -1):\n",
+    "            if j == 0:\n",
+    "                dp[j] = max(-prices[i] + dp[1], dp[0])\n",
+    "            else:\n",
+    "                dp[j] = max(prices[i] + dp[0], dp[1])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks1([7,1,5,3,6,4]) == 7\n",
+    "assert stocks1([1,2,3,4,5]) == 4\n",
+    "assert stocks1([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f99546d3",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/-uQGzhYj8BQ?si=-Ps8pCdPtuWjuTQZ\n",
+    "Buy and Sell Stocks - III: https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iii/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8939c406",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks2Memo(prices: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    0 - Start\n",
+    "    1 - Buy 1\n",
+    "    2 - Sell 1\n",
+    "    3 - Buy 2\n",
+    "    4 - Sell 2\n",
+    "    \"\"\"\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> int:\n",
+    "        if i == N or j == 4:\n",
+    "            return 0\n",
+    "        elif j % 2 == 0: # Not holding any stock: buy / not buy\n",
+    "            return max(-prices[i] + backtrack(i + 1, j + 1), backtrack(i + 1, j))\n",
+    "        else:\n",
+    "            return max(prices[i] + backtrack(i + 1, j + 1), backtrack(i + 1, j))\n",
+    "\n",
+    "    N = len(prices)\n",
+    "    return backtrack(0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks2Memo([3,3,5,0,0,3,1,4]) == 6\n",
+    "assert stocks2Memo([1,2,3,4,5]) == 4\n",
+    "assert stocks2Memo([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f33510b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks2Tab(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[list[int]] = [[0 for j in range(5)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(3, -1, -1):\n",
+    "            if j % 2 == 0: # Not holding any stock: buy / not buy\n",
+    "                dp[i][j] = max(-prices[i] + dp[i + 1][j + 1], dp[i + 1][j])\n",
+    "            else:\n",
+    "                dp[i][j] = max(prices[i] + dp[i + 1][j + 1], dp[i + 1][j])\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks2Tab([3,3,5,0,0,3,1,4]) == 6\n",
+    "assert stocks2Tab([1,2,3,4,5]) == 4\n",
+    "assert stocks2Tab([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d27ea1d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/best-time-to-buy-and-sell-stock-iii/submissions/1259699363\n",
+    "def stocks2(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[int] = [0 for j in range(5)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(3, -1, -1):\n",
+    "            if j % 2 == 0: # Not holding any stock: buy / not buy\n",
+    "                dp[j] = max(-prices[i] + dp[j + 1], dp[j])\n",
+    "            else:\n",
+    "                dp[j] = max(prices[i] + dp[j + 1], dp[j])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks2([3,3,5,0,0,3,1,4]) == 6\n",
+    "assert stocks2([1,2,3,4,5]) == 4\n",
+    "assert stocks2([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3105a916",
+   "metadata": {},
+   "source": [
+    "Best time to buy and sell stocks - IV\n",
+    "Video Link: https://youtu.be/IV1dHbk5CDc?si=zvqGmxYAZN10-UGg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9619fbbe",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Minor update on the previous problem\n",
+    "def stocks3(k: int, prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    max_transaction = 2 * k\n",
+    "    dp: list[int] = [0 for j in range(max_transaction + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(max_transaction - 1, -1, -1):\n",
+    "            if j % 2 == 0: # Not holding any stock: buy / not buy\n",
+    "                dp[j] = max(-prices[i] + dp[j + 1], dp[j])\n",
+    "            else:\n",
+    "                dp[j] = max(prices[i] + dp[j + 1], dp[j])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks3(2, [2,4,1]) == 2\n",
+    "assert stocks3(2, [3,2,6,5,0,3]) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "317bdab8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Let's try striver's approach of using a 3D array\n",
+    "def stocks3StriverMemo(k: int, prices: list[int]) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, inventory: bool, count: int) -> int:\n",
+    "        if i == N or count == k:\n",
+    "            return 0\n",
+    "        elif not inventory: # Not holding any stock\n",
+    "            return max(-prices[i] + backtrack(i + 1, True, count), backtrack(i + 1, False, count))\n",
+    "        else:\n",
+    "            return max(prices[i] + backtrack(i + 1, False, count + 1), backtrack(i + 1, True, count))\n",
+    "\n",
+    "    N = len(prices)\n",
+    "    return backtrack(0, 0, 0)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks3StriverMemo(2, [2,4,1]) == 2\n",
+    "assert stocks3StriverMemo(2, [3,2,6,5,0,3]) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a04d3d04",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks3StriverTab(K: int, prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[list[list[int]]] = [[[0 for count in range(K + 1)] for j in range(2)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(1, -1, -1):\n",
+    "            for count in range(K - 1, -1, -1):\n",
+    "                if j == 0:\n",
+    "                    dp[i][j][count] = max(-prices[i] + dp[i + 1][1][count], dp[i + 1][0][count])\n",
+    "                else:\n",
+    "                    dp[i][j][count] = max(prices[i] + dp[i + 1][0][count + 1], dp[i + 1][1][count])\n",
+    "\n",
+    "    return dp[0][0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks3StriverTab(2, [2,4,1]) == 2\n",
+    "assert stocks3StriverTab(2, [3,2,6,5,0,3]) == 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4b496e3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def stocks3Striver(K: int, prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[list[int]] = [[0 for count in range(K + 1)] for j in range(2)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(1, -1, -1):\n",
+    "            for count in range(K - 1, -1, -1):\n",
+    "                if j == 0:\n",
+    "                    dp[j][count] = max(-prices[i] + dp[1][count], dp[0][count])\n",
+    "                else:\n",
+    "                    dp[j][count] = max(prices[i] + dp[0][count + 1], dp[1][count])\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocks3Striver(2, [2,4,1]) == 2\n",
+    "assert stocks3Striver(2, [3,2,6,5,0,3]) == 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d856ff6",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/IGIe46xw3YY?si=B0IUJM2GtIGVlq7D\n",
+    "Best time to buy and sell stock with cooldown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8063cf8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Copy pasting code from stocks II, when selling do a i + 2 instead of i + 1\n",
+    "def stocksWithCooldownTab(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[list[int]] = [[0 for j in range(2)] for i in range(N + 2)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(1, -1, -1):\n",
+    "            if j == 0:\n",
+    "                dp[i][j] = max(-prices[i] + dp[i + 1][1], dp[i + 1][0])\n",
+    "            else:\n",
+    "                dp[i][j] = max(prices[i] + dp[i + 2][0], dp[i + 1][1])\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocksWithCooldownTab([1,2,3,0,2]) == 3\n",
+    "assert stocksWithCooldownTab([1,2,2,3,1,2,3,3,1,2,3,4,1,2,3,1,2,3,2,2,3,4,1,23,2,23]) == 31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f414ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stocksWithCooldown(prices: list[int]) -> int:\n",
+    "    N = len(prices)\n",
+    "    dp: list[int] = [0 for j in range(2)]\n",
+    "    next_dp: list[int] = [0 for j in range(2)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        temp = list(dp)\n",
+    "        for j in range(1, -1, -1):\n",
+    "            if j == 0:\n",
+    "                dp[j] = max(-prices[i] + dp[1], dp[0])\n",
+    "            else:\n",
+    "                dp[j] = max(prices[i] + next_dp[0], dp[1])\n",
+    "        next_dp = temp\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert stocksWithCooldown([1,2,3,0,2]) == 3\n",
+    "assert stocksWithCooldown([1,2,2,3,1,2,3,3,1,2,3,4,1,2,3,1,2,3,2,2,3,4,1,23,2,23]) == 31"
    ]
   }
  ],
