--- a/study/striver-A2Z/13-dp.ipynb
+++ b/study/striver-A2Z/13-dp.ipynb
@@ -5600,6 +5600,7 @@
      "iopub.status.idle": "2024-05-17T14:08:54.072674Z",
      "shell.execute_reply": "2024-05-17T14:08:54.072270Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.022077,
      "end_time": "2024-05-17T14:08:54.073772",
@@ -5641,6 +5642,425 @@
     "# Testing the solution\n",
     "assert lengthOfLISOptimal([0,1,0,3,2,3]) == 4\n",
     "assert lengthOfLISOptimal([1,1,1,1,1]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8847dadb",
+   "metadata": {},
+   "source": [
+    "Largest divisible subset: https://leetcode.com/problems/largest-divisible-subset/description/\n",
+    "Video Link: https://youtu.be/gDuZwBW9VvM?si=Ar4BoU9h-JYT5j_S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85cb2adc",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/largest-divisible-subset/submissions/1260986041\n",
+    "def largestDivisibleSubset(nums: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    At each element, it is pick or no pick. We can pick it max_ divides n or n divides max_. Once we chose to pick n, update max_\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    N = len(nums)\n",
+    "\n",
+    "    # We sort it to make our loop code easier, works without sorting\n",
+    "    # but need to check for i % j as well j % i. Besides we are asked for\n",
+    "    # a subset and the ordering doesn't really matter.\n",
+    "    nums.sort()\n",
+    "\n",
+    "    # Dp to store the longest subset and the prevs for backtracking (refer: lengthOfLISBetter())\n",
+    "    lengths: list[int] = [1 for i in range(N)]\n",
+    "    prevs: list[int] = [i for i in range(N)]\n",
+    "\n",
+    "    # Till index i, what is max length divisible subset that I can find?\n",
+    "    for i in range(N):\n",
+    "        for j in range(i):\n",
+    "            if nums[i] % nums[j] == 0 and lengths[i] < lengths[j] + 1:\n",
+    "                lengths[i] = lengths[j] + 1\n",
+    "                prevs[i] = j\n",
+    "\n",
+    "    # Find the maximum length\n",
+    "    max_idx = 0\n",
+    "    for i in range(N):\n",
+    "        if lengths[max_idx] < lengths[i]:\n",
+    "            max_idx = i\n",
+    "\n",
+    "    # Create the Largest Divisible Subset\n",
+    "    i = max_idx\n",
+    "    LDS: list[int] = [nums[i]]\n",
+    "    while prevs[i] != i:\n",
+    "        i = prevs[i]\n",
+    "        LDS.append(nums[i])\n",
+    "\n",
+    "    return LDS\n",
+    "\n",
+    "# Testing the solution\n",
+    "largestDivisibleSubset([1,3,2,4,6,8,9,10,12,13,14,7,18,20,21,25,26,28,30,32])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd81bb05",
+   "metadata": {},
+   "source": [
+    "Longest String Chain: https://leetcode.com/problems/longest-string-chain/description/\n",
+    "Video Link: https://leetcode.com/problems/longest-string-chain/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e337f6",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestStrChainMemo(words: list[str]) -> int:\n",
+    "    def isNext(i1: int, i2: int) -> bool:\n",
+    "        \"\"\"\n",
+    "        xbc, cxbc -> True\n",
+    "        xbc, xcbc -> True\n",
+    "        xbc, xbcc -> True\n",
+    "        xbc, xacc -> False\n",
+    "        \"\"\"\n",
+    "        N1, N2 = len(words[i1]), len(words[i2])\n",
+    "        if N2 - N1 != 1:\n",
+    "            return False\n",
+    "        else:\n",
+    "            mismatch = 0\n",
+    "            i = j = 0\n",
+    "            while i < N1 and j < N2:\n",
+    "                if words[i1][i] != words[i2][j]:\n",
+    "                    j += 1\n",
+    "                    mismatch += 1\n",
+    "                else:\n",
+    "                    i, j = i + 1, j + 1\n",
+    "\n",
+    "            return mismatch <= 1\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, prev: int) -> int:\n",
+    "        if i == N:\n",
+    "            return 0\n",
+    "        elif prev == -1 or isNext(prev, i):\n",
+    "            return max(1 + backtrack(i + 1, i), backtrack(i + 1, prev))\n",
+    "        else:\n",
+    "            return backtrack(i + 1, prev)\n",
+    "\n",
+    "    # Sorting to make things easier\n",
+    "    N = len(words)\n",
+    "    words.sort(key=len)\n",
+    "    return backtrack(0, -1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestStrChainMemo([\"xbc\",\"pcxbcf\",\"xb\",\"cxbc\",\"pcxbc\"]) == 5\n",
+    "assert longestStrChainMemo([\"a\",\"b\",\"ba\",\"bca\",\"bda\",\"bdca\"]) == 4\n",
+    "assert longestStrChainMemo([\"abcd\",\"dbqca\"]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89ac7af0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestStrChainTab(words: list[str]) -> int:\n",
+    "    def isNext(i1: int, i2: int) -> bool:\n",
+    "        N1, N2 = len(words[i1]), len(words[i2])\n",
+    "        if N2 - N1 != 1:\n",
+    "            return False\n",
+    "        else:\n",
+    "            mismatch = 0\n",
+    "            i = j = 0\n",
+    "            while i < N1 and j < N2:\n",
+    "                if words[i1][i] != words[i2][j]:\n",
+    "                    j += 1\n",
+    "                    mismatch += 1\n",
+    "                else:\n",
+    "                    i, j = i + 1, j + 1\n",
+    "\n",
+    "            return mismatch <= 1\n",
+    "\n",
+    "    N = len(words)\n",
+    "    words.sort(key=len)\n",
+    "    dp: list[list[int]] = [[0 for j in range(N + 2)] for i in range(N + 1)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for prev in range(i, -1, -1):\n",
+    "            if prev == 0 or isNext(prev - 1, i):\n",
+    "                dp[i][prev] = max(1 + dp[i + 1][i + 1], dp[i + 1][prev])\n",
+    "            else:\n",
+    "                dp[i][prev] = dp[i + 1][prev]\n",
+    "\n",
+    "    return dp[0][0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestStrChainTab([\"xbc\",\"pcxbcf\",\"xb\",\"cxbc\",\"pcxbc\"]) == 5\n",
+    "assert longestStrChainTab([\"a\",\"b\",\"ba\",\"bca\",\"bda\",\"bdca\"]) == 4\n",
+    "assert longestStrChainTab([\"abcd\",\"dbqca\"]) == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45db1b07",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestStrChain(words: list[str]) -> int:\n",
+    "    \"\"\"\n",
+    "    Time: O(N ** 2 x L), Space: O(N)\n",
+    "    L - max word length\n",
+    "    \"\"\"\n",
+    "    def isNext(i1: int, i2: int) -> bool:\n",
+    "        N1, N2 = len(words[i1]), len(words[i2])\n",
+    "        if N2 - N1 != 1:\n",
+    "            return False\n",
+    "        else:\n",
+    "            mismatch = 0\n",
+    "            i = j = 0\n",
+    "            while i < N1 and j < N2:\n",
+    "                if words[i1][i] != words[i2][j]:\n",
+    "                    j += 1\n",
+    "                    mismatch += 1\n",
+    "                else:\n",
+    "                    i, j = i + 1, j + 1\n",
+    "\n",
+    "            return mismatch <= 1\n",
+    "\n",
+    "    N = len(words)\n",
+    "    words.sort(key=len)\n",
+    "    dp: list[int] = [0 for j in range(N + 2)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for prev in range(i, -1, -1):\n",
+    "            if prev == 0 or isNext(prev - 1, i):\n",
+    "                dp[prev] = max(1 + dp[i + 1], dp[prev])\n",
+    "\n",
+    "    return dp[0]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestStrChain([\"xbc\",\"pcxbcf\",\"xb\",\"cxbc\",\"pcxbc\"]) == 5\n",
+    "assert longestStrChain([\"a\",\"b\",\"ba\",\"bca\",\"bda\",\"bdca\"]) == 4\n",
+    "assert longestStrChain([\"abcd\",\"dbqca\"]) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5173b7e5",
+   "metadata": {},
+   "source": [
+    "Longest Bitonic Subsequence\n",
+    "Video Link: https://youtu.be/y4vN0WNdrlg?si=6eUQzwVJYFEeUj49"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2d77aba",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def longestBitonicSequence(N : int, nums : list[int]) -> int:\n",
+    "    # Find the subsequence length of strictly increasing subsequence\n",
+    "    increasing: list[int] = [1 for i in range(N)]\n",
+    "    for i in range(N):\n",
+    "        for j in range(i):\n",
+    "            if nums[j] < nums[i]:\n",
+    "                increasing[i] = max(increasing[i], increasing[j] + 1)\n",
+    "\n",
+    "    # Find the subsequence length of strictly decreasing subsequence\n",
+    "    decreasing: list[int] = [1 for i in range(N)]\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        for j in range(i + 1, N):\n",
+    "            if nums[j] < nums[i]:\n",
+    "                decreasing[i] = max(decreasing[i], decreasing[j] + 1)\n",
+    "\n",
+    "    # Compute the longest Bitonic sequence\n",
+    "    max_length = 0\n",
+    "    for i in range(N):\n",
+    "        if increasing[i] > 1 and decreasing[i] > 1:\n",
+    "            max_length = max(max_length, increasing[i] + decreasing[i] - 1)\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestBitonicSequence(8, [1, 11, 2, 10, 4, 5, 2, 1]) == 6\n",
+    "assert longestBitonicSequence(5, [1, 2, 5, 3, 2]) == 5\n",
+    "assert longestBitonicSequence(3, [5, 7, 9]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbcaf743",
+   "metadata": {},
+   "source": [
+    "Number of longest increasing subsequences: https://leetcode.com/problems/number-of-longest-increasing-subsequence/\n",
+    "Video link: https://youtu.be/cKVl1TFdNXg?si=F5dpyIpk-GQ0mhEl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e5206cb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/number-of-longest-increasing-subsequence/submissions/1261164775\n",
+    "def findNumberOfLIS(nums: list[int]) -> int:\n",
+    "    N = len(nums)\n",
+    "    dp: list[int] = [1 for i in range(N)]\n",
+    "    prevs: dict[int, set[int]] = dict()\n",
+    "    for i in range(N):\n",
+    "        for j in range(i):\n",
+    "            if nums[j] < nums[i] and dp[i] <= 1 + dp[j]:\n",
+    "                # If new max, reset prev\n",
+    "                if dp[i] < 1 + dp[j]:\n",
+    "                    prevs[i] = {j}\n",
+    "                # If max already exists, add to prev\n",
+    "                else:\n",
+    "                    prev = prevs.get(i, set())\n",
+    "                    prev.add(j)\n",
+    "                    prevs[i] = prev\n",
+    "\n",
+    "                dp[i] = 1 + dp[j]\n",
+    "\n",
+    "    # Find the max index\n",
+    "    max_indices: list[int] = [0]\n",
+    "    for i in range(1, N):\n",
+    "        if dp[i] > dp[max_indices[0]]:\n",
+    "            max_indices = [i]\n",
+    "        elif dp[i] == dp[max_indices[0]]:\n",
+    "            max_indices.append(i)\n",
+    "\n",
+    "    # Backtrack to find the counts\n",
+    "    def backtrack(i: int) -> int:\n",
+    "        if i not in prevs:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            count = 0\n",
+    "            for j in prevs[i]:\n",
+    "                count += backtrack(j)\n",
+    "            return count\n",
+    "\n",
+    "    # Find count for all max indices and sum them\n",
+    "    result: int = 0\n",
+    "    for max_idx in max_indices:\n",
+    "        result += backtrack(max_idx)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findNumberOfLIS([1,3,5,4,7,6,5]) == 5\n",
+    "assert findNumberOfLIS([2,2,2,2,2]) == 5\n",
+    "assert findNumberOfLIS([1,2,3,4,4,4,4,5,5,2,3,3,4,5,6,6,4,2,1,2,2,3,4,5]) == 34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf84ae9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/number-of-longest-increasing-subsequence/submissions/1261259922\n",
+    "def findNumberOfLISStriver(nums: list[int]) -> int:\n",
+    "    N = len(nums)\n",
+    "    dp: list[int] = [1 for i in range(N)]\n",
+    "    counts: list[int] = [1 for i in range(N)]\n",
+    "\n",
+    "    # Compute the max length LIS and store the counts\n",
+    "    lis_length: int = 1\n",
+    "    for i in range(N):\n",
+    "        for j in range(i):\n",
+    "            if nums[j] < nums[i] and dp[i] <= 1 + dp[j]:\n",
+    "                # Inherit\n",
+    "                if dp[i] < 1 + dp[j]:\n",
+    "                    dp[i] = 1 + dp[j]\n",
+    "                    counts[i] = counts[j]\n",
+    "                    lis_length = max(lis_length, dp[i])\n",
+    "\n",
+    "                # Increment\n",
+    "                else:\n",
+    "                    counts[i] += counts[j]\n",
+    "\n",
+    "    # Count the occurances of max length LIS\n",
+    "    lis_count = 0\n",
+    "    for i in range(N):\n",
+    "        if dp[i] == lis_length:\n",
+    "            lis_count += counts[i]\n",
+    "\n",
+    "    return lis_count\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findNumberOfLISStriver([1,3,5,4,7,6,5]) == 5\n",
+    "assert findNumberOfLISStriver([2,2,2,2,2]) == 5\n",
+    "assert findNumberOfLISStriver([1,2,3,4,4,4,4,5,5,2,3,3,4,5,6,6,4,2,1,2,2,3,4,5]) == 34"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ea62afb",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def matrixMultiplicationBrute(N: int, arr: list[int]) -> float:\n",
+    "    if N == 2:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        min_: float = math.inf\n",
+    "        for i in range(1, N - 1):\n",
+    "            min_ = min(min_, (arr[i - 1] * arr[i] * arr[i + 1]) + matrixMultiplicationBrute(N - 1, arr[:i] + arr[i + 1:]))\n",
+    "        return min_\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert matrixMultiplicationBrute(5, [40, 20, 30, 10, 30]) == 26000\n",
+    "assert matrixMultiplicationBrute(4, [10, 30, 5, 60]) == 4500"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f269aff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrixMultiplication(N: int, arr: list[int]) -> float:\n",
+    "    @functools.cache\n",
+    "    def backtrack(i: int, j: int) -> float:\n",
+    "        if i == j:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            min_: float = math.inf\n",
+    "            for k in range(i, j):\n",
+    "                min_ = min(min_, (arr[i - 1] * arr[k] * arr[j]) + backtrack(i, k) + backtrack(k + 1, j))\n",
+    "            return min_\n",
+    "\n",
+    "    return backtrack(1, N - 1)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert matrixMultiplication(5, [40, 20, 30, 10, 30]) == 26000\n",
+    "assert matrixMultiplication(4, [10, 30, 5, 60]) == 4500"
    ]
   }
  ],
