--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -305,6 +305,7 @@
      "iopub.status.idle": "2024-05-16T16:30:22.710374Z",
      "shell.execute_reply": "2024-05-16T16:30:22.709840Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.006885,
      "end_time": "2024-05-16T16:30:22.711505",
@@ -327,6 +328,124 @@
     "# Testing the solution\n",
     "assert stocks1([7,1,5,3,6,4]) == 5\n",
     "assert stocks1([7,6,4,3,1]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b36063c0",
+   "metadata": {},
+   "source": [
+    "Weekly Contest 398: 19th May 2024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d35821a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1\n",
+    "def isArraySpecial(nums: list[int]) -> bool:\n",
+    "    N = len(nums)\n",
+    "    for i in range(N - 1):\n",
+    "        i1, i2 = nums[i] % 2, nums[i + 1] % 2\n",
+    "        if (i1 == 0 and i2 == 0) or (i1 == 1 and i2 == 1):\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isArraySpecial([4,3,1,6]) == False\n",
+    "assert isArraySpecial([2,1,4]) == True\n",
+    "assert isArraySpecial([1]) == True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce3280b2",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2\n",
+    "def isArraySpecial2(nums: list[int], queries: list[list[int]]) -> list[bool]:\n",
+    "    N = len(nums)\n",
+    "    parity: list[int] = list(map(lambda x: x % 2, nums))\n",
+    "\n",
+    "    @functools.cache\n",
+    "    def backtrack(start: int, end: int) -> bool:\n",
+    "        if start == end:\n",
+    "            return True\n",
+    "        else:\n",
+    "            mid = (start + end) // 2\n",
+    "            isSpecial =  parity[mid] != parity[mid + 1] and backtrack(start, mid) and backtrack(mid + 1, end)\n",
+    "            return isSpecial\n",
+    "\n",
+    "    result: list[bool] = []\n",
+    "    for i, j in queries:\n",
+    "        result.append(backtrack(i, j))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isArraySpecial2([4,3,1,6], [[0,2],[2,3]]) == [False, True]\n",
+    "assert isArraySpecial2([3,4,1,2,6], [[0,4]]) == [False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8941ed",
+   "metadata": {
+    "lines_to_next_cell": 3
+   },
+   "outputs": [],
+   "source": [
+    "# Q3\n",
+    "def sumDigitDifferencesBrute(nums: list[int]) -> int:\n",
+    "    length = len(str(nums[0]))\n",
+    "    count = 0\n",
+    "    for n1, n2 in itertools.combinations(nums, r=2):\n",
+    "        n1_str, n2_str = str(n1), str(n2)\n",
+    "        for i in range(length):\n",
+    "            if n1_str[i] != n2_str[i]:\n",
+    "                count += 1\n",
+    "\n",
+    "    return count\n",
+    "\n",
+    "def sumDigitDifferences(nums: list[int]) -> int:\n",
+    "    def count(arr: list[int]) -> int:\n",
+    "        N = len(arr)\n",
+    "        temp = 0\n",
+    "        for i in range(N - 1):\n",
+    "            temp += arr[i] * sum(arr[i + 1:])\n",
+    "\n",
+    "        return temp\n",
+    "\n",
+    "    length = len(str(nums[0]))\n",
+    "    digits_dict: dict[int, dict[str, int]] = dict()\n",
+    "    for n in nums:\n",
+    "        n_str = str(n)\n",
+    "        for i in range(length):\n",
+    "            positions = digits_dict.get(i, dict())\n",
+    "            positions[n_str[i]] = positions.get(n_str[i], 0) + 1\n",
+    "            digits_dict[i] = positions\n",
+    "\n",
+    "    result: int = 0\n",
+    "    for i in range(length):\n",
+    "        result += count(list(digits_dict[i].values()))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "for i in range(100):\n",
+    "    temp = list(np.random.randint(10, 100, 50))\n",
+    "    assert sumDigitDifferencesBrute(temp) == sumDigitDifferences(temp)"
    ]
   }
  ],
